crates/compiler/tests/parse_errors/record_eq.elm
module Main exposing (..)

x =
    { a 1 }
